Mon Jul 29 14:52:46 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (xsystem): expand environment variable in all macros not
	  expanded with RbConfig.  [Bug #8702]

	* test/mkmf/test_framework.rb (create_framework): replace all $@ not
	  only once.

Mon Jul 29 06:54:30 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/win32.c (rb_w32_pipe): use enum for compile time constants,
	  instead of const int for debugging.

Mon Jul 29 00:11:49 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bigdivrem): Specialized implementation added for
	  nx == 2 && ny == 2

Sun Jul 28 20:28:41 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* io.c (io_getpartial): use rb_str_locktmp_ensure().
	  [ruby-core:56121] [Bug #8669]

	* io.c (rb_io_sysread): ditto.

	* test/ruby/test_io.rb: add tests for above.

Sun Jul 28 20:10:49 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/extmk.rb (extmake): should make static libraries for extensions
	  to be statically linked.  [Bug #7948]

Sun Jul 28 17:38:32 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* string.c: add internal API rb_str_locktmp_ensure().

	* io.c (io_fread): use rb_str_locktmp_ensure().
	  [ruby-core:56121] [Bug #8669]

	* test/ruby/test_io.rb: add a test for above.

Sun Jul 28 13:04:39 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* io.c (interpret_seek_whence): support SEEK_DATA and SEEK_HOLE.
	  These are whences for lseek(2) supported by Linux since version 3.1.
	  [ruby-core:56123] [Feature #8671]

	* test/ruby/test_io.rb: Add tests for above.

Sun Jul 28 12:41:39 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (absint_numwords_generic): The char_bit variable changed
	  to static constant.

Sun Jul 28 12:03:23 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c: Constify bary_* functions.

Sun Jul 28 11:12:07 2013  Tanaka Akira  <akr@fsij.org>

	* include/ruby/intern.h (rb_absint_size): Declaration moved from
	  internal.h to calculate required buffer size to pack integers.